--- a/src/notebooks/main.ipynb
+++ b/src/notebooks/main.ipynb
@@ -2,9 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of transpile_benchy.interface failed: Traceback (most recent call last):\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 500, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 349, in update_class\n",
+      "    if update_generic(old_obj, new_obj):\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 309, in update_function\n",
+      "    setattr(old, name, getattr(new, name))\n",
+      "ValueError: __init__() requires a code object with 1 free vars, not 0\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2"
@@ -20,14 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'filter_str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtranspile_benchy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39minterface\u001b[39;00m \u001b[39mimport\u001b[39;00m QASMBench\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mqiskit\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m qasm_bench \u001b[39m=\u001b[39m QASMBench(size\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39msmall\u001b[39;49m\u001b[39m\"\u001b[39;49m, filter_str\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mtoffoli_n3\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtranspile_benchy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m DepthMetric\n\u001b[1;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcircuit\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlibrary\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstandard_gates\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mx\u001b[39;00m \u001b[39mimport\u001b[39;00m CXGate, XGate\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'filter_str'"
+     ]
+    }
+   ],
    "source": [
     "from transpile_benchy.interface import QASMBench\n",
     "import qiskit\n",
     "\n",
-    "qasm_bench = QASMBench(size=\"small\", filter_str=['toffoli_n3'])\n",
+    "qasm_bench = QASMBench(size=\"small\", filter_list=['toffoli_n3'])\n",
     "\n",
     "from transpile_benchy.metrics import DepthMetric\n",
     "from qiskit.circuit.library.standard_gates.x import CXGate, XGate\n",
@@ -43,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
