adds new function to get all qasm circuit names

--- a/src/notebooks/main.ipynb
+++ b/src/notebooks/main.ipynb
@@ -2,13 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[autoreload of transpile_benchy.interface failed: Traceback (most recent call last):\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 500, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 349, in update_class\n",
+      "    if update_generic(old_obj, new_obj):\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 309, in update_function\n",
+      "    setattr(old, name, getattr(new, name))\n",
+      "ValueError: __init__() requires a code object with 1 free vars, not 0\n",
+      "]\n",
       "[autoreload of transpile_benchy.interface failed: Traceback (most recent call last):\n",
       "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
       "    superreload(m, reload, self.old_objects)\n",
@@ -42,18 +57,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'filter_str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtranspile_benchy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39minterface\u001b[39;00m \u001b[39mimport\u001b[39;00m QASMBench\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mqiskit\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m qasm_bench \u001b[39m=\u001b[39m QASMBench(size\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39msmall\u001b[39;49m\u001b[39m\"\u001b[39;49m, filter_str\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mtoffoli_n3\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtranspile_benchy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m DepthMetric\n\u001b[1;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcircuit\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlibrary\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstandard_gates\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mx\u001b[39;00m \u001b[39mimport\u001b[39;00m CXGate, XGate\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'filter_str'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of transpile_benchy.interface failed: Traceback (most recent call last):\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 500, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 349, in update_class\n",
+      "    if update_generic(old_obj, new_obj):\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 309, in update_function\n",
+      "    setattr(old, name, getattr(new, name))\n",
+      "ValueError: __init__() requires a code object with 1 free vars, not 0\n",
+      "]\n",
+      "[autoreload of transpile_benchy.interface failed: Traceback (most recent call last):\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 500, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 349, in update_class\n",
+      "    if update_generic(old_obj, new_obj):\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 309, in update_function\n",
+      "    setattr(old, name, getattr(new, name))\n",
+      "ValueError: __init__() requires a code object with 1 free vars, not 0\n",
+      "]\n"
      ]
     }
    ],
@@ -61,14 +101,17 @@
     "from transpile_benchy.interface import QASMBench\n",
     "import qiskit\n",
     "\n",
-    "qasm_bench = QASMBench(size=\"small\", filter_list=['toffoli_n3'])\n",
+    "qasm_bench = QASMBench(size=\"small\", filter_list=[\"toffoli\"])\n",
+    "all_circuits = (\n",
+    "    qasm_bench.get_all_possible_circuits()\n",
+    ")  # list of names of all possible circuits for qasm\n",
     "\n",
     "from transpile_benchy.metrics import DepthMetric\n",
     "from qiskit.circuit.library.standard_gates.x import CXGate, XGate\n",
     "\n",
-    "basis_gate = qiskit.circuit.Gate(name='cx',num_qubits=2, params=[])\n",
+    "basis_gate = CXGate()\n",
     "\n",
-    "depth_metric = DepthMetric(CXGate())\n",
+    "depth_metric = DepthMetric(basis_gate=basis_gate)\n",
     "\n",
     "from qiskit.transpiler import CouplingMap\n",
     "\n",
@@ -77,7 +120,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['adder_n10',\n",
+       " 'variational_n4',\n",
+       " 'hs4_n4',\n",
+       " 'deutsch_n2',\n",
+       " 'shor_n5',\n",
+       " 'teleportation_n3',\n",
+       " 'qec_en_n5',\n",
+       " 'simon_n6',\n",
+       " 'qft_n4',\n",
+       " 'basis_change_n3',\n",
+       " 'grover_n2',\n",
+       " 'error_correctiond3_n5',\n",
+       " 'adder_n4',\n",
+       " 'ipea_n2',\n",
+       " 'hhl_n10',\n",
+       " 'qaoa_n3',\n",
+       " 'quantumwalks_n2',\n",
+       " 'qaoa_n6',\n",
+       " 'hhl_n7',\n",
+       " 'pea_n5',\n",
+       " 'ising_n10',\n",
+       " 'dnn_n2',\n",
+       " 'dnn_n8',\n",
+       " 'iswap_n2',\n",
+       " 'wstate_n3',\n",
+       " 'lpn_n5',\n",
+       " 'cat_state_n4',\n",
+       " 'toffoli_n3',\n",
+       " 'bell_n4',\n",
+       " 'qec_sm_n5',\n",
+       " 'linearsolver_n3',\n",
+       " 'basis_test_n4',\n",
+       " 'basis_trotter_n4',\n",
+       " 'fredkin_n3',\n",
+       " 'qpe_n9',\n",
+       " 'qrng_n4',\n",
+       " 'bb84_n8']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_circuits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +256,7 @@
       "WARNING:transpile_benchy:No result found for monodromy_depth on circuit toffoli_n3 with transpiler SABRE\n",
       "WARNING:transpile_benchy:No result found for monodromy_depth on circuit toffoli_n3 with transpiler SABRE\n",
       "WARNING:transpile_benchy:No result found for monodromy_depth on circuit toffoli_n3 with transpiler SABRE\n",
-      "Running circuits for QASMBench: 100%|██████████| 1/1 [00:00<00:00,  8.78it/s]\n"
+      "Running circuits for QASMBench: 100%|██████████| 1/1 [00:00<00:00,  8.73it/s]\n"
      ]
     }
    ],
@@ -185,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
