--- a/src/notebooks/main.ipynb
+++ b/src/notebooks/main.ipynb
@@ -1,99 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of transpile_benchy.interface failed: Traceback (most recent call last):\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 500, in superreload\n",
-      "    update_generic(old_obj, new_obj)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 349, in update_class\n",
-      "    if update_generic(old_obj, new_obj):\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 309, in update_function\n",
-      "    setattr(old, name, getattr(new, name))\n",
-      "ValueError: __init__() requires a code object with 1 free vars, not 0\n",
-      "]\n",
-      "[autoreload of transpile_benchy.interface failed: Traceback (most recent call last):\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 500, in superreload\n",
-      "    update_generic(old_obj, new_obj)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 349, in update_class\n",
-      "    if update_generic(old_obj, new_obj):\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 309, in update_function\n",
-      "    setattr(old, name, getattr(new, name))\n",
-      "ValueError: __init__() requires a code object with 1 free vars, not 0\n",
-      "]\n"
-     ]
-    }
-   ],
-   "source": [
-    "%reload_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example benchmarking comparison between 2 Qiskit transpilers"
+    "### Example benchmarking comparison between 2 Qiskit transpilers\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[autoreload of transpile_benchy.interface failed: Traceback (most recent call last):\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 500, in superreload\n",
-      "    update_generic(old_obj, new_obj)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 349, in update_class\n",
-      "    if update_generic(old_obj, new_obj):\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 309, in update_function\n",
-      "    setattr(old, name, getattr(new, name))\n",
-      "ValueError: __init__() requires a code object with 1 free vars, not 0\n",
-      "]\n",
-      "[autoreload of transpile_benchy.interface failed: Traceback (most recent call last):\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 500, in superreload\n",
-      "    update_generic(old_obj, new_obj)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 349, in update_class\n",
-      "    if update_generic(old_obj, new_obj):\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 397, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"/home/jones1/transpile_benchy/.venv/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 309, in update_function\n",
-      "    setattr(old, name, getattr(new, name))\n",
-      "ValueError: __init__() requires a code object with 1 free vars, not 0\n",
-      "]\n"
+      "['qec_en_n5', 'qaoa_n3', 'grover_n2', 'toffoli_n3', 'hs4_n4', 'variational_n4', 'error_correctiond3_n5', 'deutsch_n2', 'ipea_n2', 'hhl_n7', 'bell_n4', 'quantumwalks_n2', 'wstate_n3', 'shor_n5', 'ising_n10', 'dnn_n2', 'basis_test_n4', 'basis_trotter_n4', 'basis_change_n3', 'cat_state_n4', 'bb84_n8', 'teleportation_n3', 'qrng_n4', 'fredkin_n3', 'qec_sm_n5', 'adder_n10', 'qaoa_n6', 'hhl_n10', 'qpe_n9', 'dnn_n8', 'adder_n4', 'linearsolver_n3', 'qft_n4', 'lpn_n5', 'pea_n5', 'iswap_n2', 'simon_n6']\n"
      ]
     }
    ],
@@ -102,9 +26,9 @@
     "import qiskit\n",
     "\n",
     "qasm_bench = QASMBench(size=\"small\", filter_list=[\"toffoli\"])\n",
-    "all_circuits = (\n",
-    "    qasm_bench.get_all_possible_circuits()\n",
-    ")  # list of names of all possible circuits for qasm\n",
+    "print(qasm_bench)  # list of names of all possible circuits for qasm\n",
+    "\n",
+    "# print(all_circuits)\n",
     "\n",
     "from transpile_benchy.metrics import DepthMetric\n",
     "from qiskit.circuit.library.standard_gates.x import CXGate, XGate\n",
@@ -120,63 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['adder_n10',\n",
-       " 'variational_n4',\n",
-       " 'hs4_n4',\n",
-       " 'deutsch_n2',\n",
-       " 'shor_n5',\n",
-       " 'teleportation_n3',\n",
-       " 'qec_en_n5',\n",
-       " 'simon_n6',\n",
-       " 'qft_n4',\n",
-       " 'basis_change_n3',\n",
-       " 'grover_n2',\n",
-       " 'error_correctiond3_n5',\n",
-       " 'adder_n4',\n",
-       " 'ipea_n2',\n",
-       " 'hhl_n10',\n",
-       " 'qaoa_n3',\n",
-       " 'quantumwalks_n2',\n",
-       " 'qaoa_n6',\n",
-       " 'hhl_n7',\n",
-       " 'pea_n5',\n",
-       " 'ising_n10',\n",
-       " 'dnn_n2',\n",
-       " 'dnn_n8',\n",
-       " 'iswap_n2',\n",
-       " 'wstate_n3',\n",
-       " 'lpn_n5',\n",
-       " 'cat_state_n4',\n",
-       " 'toffoli_n3',\n",
-       " 'bell_n4',\n",
-       " 'qec_sm_n5',\n",
-       " 'linearsolver_n3',\n",
-       " 'basis_test_n4',\n",
-       " 'basis_trotter_n4',\n",
-       " 'fredkin_n3',\n",
-       " 'qpe_n9',\n",
-       " 'qrng_n4',\n",
-       " 'bb84_n8']"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_circuits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -250,13 +118,28 @@
      "output_type": "stream",
      "text": [
       "INFO:transpile_benchy:Running benchmarks for circuits...\n",
-      "Running circuits for QASMBench:   0%|          | 0/1 [00:00<?, ?it/s]WARNING:transpile_benchy:No result found for monodromy_depth on circuit toffoli_n3 with transpiler Trivial_Basic\n",
-      "WARNING:transpile_benchy:No result found for monodromy_depth on circuit toffoli_n3 with transpiler Trivial_Basic\n",
-      "WARNING:transpile_benchy:No result found for monodromy_depth on circuit toffoli_n3 with transpiler Trivial_Basic\n",
-      "WARNING:transpile_benchy:No result found for monodromy_depth on circuit toffoli_n3 with transpiler SABRE\n",
-      "WARNING:transpile_benchy:No result found for monodromy_depth on circuit toffoli_n3 with transpiler SABRE\n",
-      "WARNING:transpile_benchy:No result found for monodromy_depth on circuit toffoli_n3 with transpiler SABRE\n",
-      "Running circuits for QASMBench: 100%|██████████| 1/1 [00:00<00:00,  8.73it/s]\n"
+      "Running circuits for QASMBench:   0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running circuits for QASMBench:   0%|          | 0/1 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Trivial_Basic' object has no attribute 'reset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 19\u001b[0m\n\u001b[1;32m     11\u001b[0m qiskit_logger\u001b[39m.\u001b[39msetLevel(logging\u001b[39m.\u001b[39mWARNING)\n\u001b[1;32m     13\u001b[0m benchmark \u001b[39m=\u001b[39m Benchmark(\n\u001b[1;32m     14\u001b[0m     [Trivial_Basic(coupling_map), SABRE(coupling_map)],\n\u001b[1;32m     15\u001b[0m     [qasm_bench],\n\u001b[1;32m     16\u001b[0m     [depth_metric],\n\u001b[1;32m     17\u001b[0m     transpile_benchy_logger,\n\u001b[1;32m     18\u001b[0m )\n\u001b[0;32m---> 19\u001b[0m benchmark\u001b[39m.\u001b[39;49mrun()\n",
+      "File \u001b[0;32m~/transpile_benchy/src/transpile_benchy/benchmark.py:210\u001b[0m, in \u001b[0;36mBenchmark.run\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    204\u001b[0m     circuits \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mload_quantum_circuits(submodule)\n\u001b[1;32m    205\u001b[0m     \u001b[39mfor\u001b[39;00m circuit \u001b[39min\u001b[39;00m tqdm(\n\u001b[1;32m    206\u001b[0m         circuits,\n\u001b[1;32m    207\u001b[0m         total\u001b[39m=\u001b[39mtotal,\n\u001b[1;32m    208\u001b[0m         desc\u001b[39m=\u001b[39m\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mRunning circuits for \u001b[39m\u001b[39m{\u001b[39;00msubmodule\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    209\u001b[0m     ):\n\u001b[0;32m--> 210\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrun_single_circuit(circuit)\n\u001b[1;32m    212\u001b[0m \u001b[39m# for some unknown reason have to clean out garbage keys from results\u001b[39;00m\n\u001b[1;32m    213\u001b[0m \u001b[39m# I think this has to do with the default dict\u001b[39;00m\n\u001b[1;32m    214\u001b[0m \u001b[39m# WARNING HORRIBLE HACK CODE\u001b[39;00m\n\u001b[1;32m    215\u001b[0m \u001b[39mfor\u001b[39;00m metric \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmetrics:\n",
+      "File \u001b[0;32m~/transpile_benchy/src/transpile_benchy/benchmark.py:192\u001b[0m, in \u001b[0;36mBenchmark.run_single_circuit\u001b[0;34m(self, circuit)\u001b[0m\n\u001b[1;32m    190\u001b[0m \u001b[39mfor\u001b[39;00m transpiler \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtranspilers:\n\u001b[1;32m    191\u001b[0m     \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_runs):\n\u001b[0;32m--> 192\u001b[0m         transpiled_circuit \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_try_transpilation(transpiler, circuit)\n\u001b[1;32m    193\u001b[0m         \u001b[39mif\u001b[39;00m transpiled_circuit \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    194\u001b[0m             \u001b[39mcontinue\u001b[39;00m\n",
+      "File \u001b[0;32m~/transpile_benchy/src/transpile_benchy/benchmark.py:167\u001b[0m, in \u001b[0;36mBenchmark._try_transpilation\u001b[0;34m(self, transpiler, circuit)\u001b[0m\n\u001b[1;32m    162\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    164\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39mdebug(\n\u001b[1;32m    165\u001b[0m     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mRunning transpiler \u001b[39m\u001b[39m{\u001b[39;00mtranspiler\u001b[39m.\u001b[39mname\u001b[39m}\u001b[39;00m\u001b[39m on circuit \u001b[39m\u001b[39m{\u001b[39;00mcircuit\u001b[39m.\u001b[39mname\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    166\u001b[0m )\n\u001b[0;32m--> 167\u001b[0m transpiler\u001b[39m.\u001b[39;49mreset()\n\u001b[1;32m    168\u001b[0m transpiled_circuit \u001b[39m=\u001b[39m transpiler\u001b[39m.\u001b[39mrun(circuit)\n\u001b[1;32m    169\u001b[0m \u001b[39mif\u001b[39;00m transpiled_circuit \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Trivial_Basic' object has no attribute 'reset'"
      ]
     }
    ],
@@ -284,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
