wip library, add bqskit submodule

--- a/src/notebooks/main.ipynb
+++ b/src/notebooks/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,46 @@
     "\n",
     "qasm_bench = QASMBench(size=\"medium\")\n",
     "# print(qasm_bench)  # list of names of all possible circuits for qasm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transpile_benchy.library import Library\n",
+    "\n",
+    "lib = Library.from_txt(\"../transpile_benchy/interfaces/circuit_lists/paspam.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CircuitNotFoundError",
+     "evalue": "Failed to load adder_9: [Errno 2] No such file or directory: 'adder_9'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m~/transpile_benchy/src/transpile_benchy/interfaces/qasm_interface.py:22\u001b[0m, in \u001b[0;36mQASMInterface._load_circuit\u001b[0;34m(self, circuit_str)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 22\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(circuit_str, \u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m     23\u001b[0m         qc \u001b[39m=\u001b[39m QuantumCircuit\u001b[39m.\u001b[39mfrom_qasm_str(f\u001b[39m.\u001b[39mread())\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'adder_9'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mCircuitNotFoundError\u001b[0m                      Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m lib:\n\u001b[1;32m      2\u001b[0m     \u001b[39mprint\u001b[39m(x)\n",
+      "File \u001b[0;32m~/transpile_benchy/src/transpile_benchy/library.py:42\u001b[0m, in \u001b[0;36mLibrary.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Return the next QuantumCircuit.\"\"\"\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex \u001b[39m<\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcircuit_list):\n\u001b[0;32m---> 42\u001b[0m     circuit \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_circuit(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcircuit_list[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mindex])\n\u001b[1;32m     43\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     44\u001b[0m     \u001b[39mreturn\u001b[39;00m circuit\n",
+      "File \u001b[0;32m~/transpile_benchy/src/transpile_benchy/library.py:67\u001b[0m, in \u001b[0;36mLibrary.get_circuit\u001b[0;34m(self, circuit_name)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     66\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 67\u001b[0m         \u001b[39mreturn\u001b[39;00m interface\u001b[39m.\u001b[39;49m_load_circuit(circuit_name)\n\u001b[1;32m     68\u001b[0m     \u001b[39mexcept\u001b[39;00m CircuitNotFoundError:\n\u001b[1;32m     69\u001b[0m         \u001b[39mcontinue\u001b[39;00m\n",
+      "File \u001b[0;32m~/transpile_benchy/src/transpile_benchy/interfaces/qasm_interface.py:27\u001b[0m, in \u001b[0;36mQASMInterface._load_circuit\u001b[0;34m(self, circuit_str)\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[39mreturn\u001b[39;00m qc\n\u001b[1;32m     26\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m---> 27\u001b[0m     \u001b[39mraise\u001b[39;00m CircuitNotFoundError(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFailed to load \u001b[39m\u001b[39m{\u001b[39;00mcircuit_str\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00me\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mCircuitNotFoundError\u001b[0m: Failed to load adder_9: [Errno 2] No such file or directory: 'adder_9'"
+     ]
+    }
+   ],
+   "source": [
+    "for x in lib:\n",
+    "    print(x)"
    ]
   },
   {
